<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="pwr.edu.myinfo.bmi.BmiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".bmi.BmiFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/bmiF_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bmiF_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bmiF_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/bmiF_heightL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiF_main_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bmiF_height_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/bmiF_hint_cm"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiF_height_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bmiF_height_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={viewModel.height}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/bmiF_mass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/bmiF_massL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiF_height_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bmiF_mass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/bmiF_hint_kg"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiF_mass_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bmiF_mass_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={viewModel.weight}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bmiF_calcuateBt"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="@{() -> viewModel.onCalculateBmi()}"
            android:text="@string/bmiF_calculateL"
            android:enabled="false"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiF_mass_input" />

        <TextView
            android:id="@+id/bmiF_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:onClick="@{() -> viewModel.onBmiDetails()}"
            android:text="@{viewModel.result}"
            android:textSize="36dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiF_calcuateBt"
            tools:text="BMI VALUE" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>